# nightshift

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  smoke.yml  stale.yml
plugin/: index.ts  package.json  tsconfig.json
src/: __init__.py  agent_client.py  cli.py  config.py  cross_project.py  dashboard.html  diff_report.py  github_issues.py  model_manager.py  models.py  notifications.py  prioritization.py  report_generator.py  runner.py  scheduler.py  server.py  task_queue.py
tests/: test_nightshift_core.py
