[project]
name = "nightshift"
version = "0.1.0"
description = "Overnight autonomous research agent for OpenCode"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nightshift = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
